Map page header added

--- a/resources/main.css
+++ b/resources/main.css
@@ -51,5 +51,14 @@ a, a:hover, a:visited, a:active {
   margin: 10px;
 }
 
+.back-btn .underline a {
+  display: inline;
+}
 
+.back-btn span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+}
 
